--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.18.1",
     "typescript": "^5.1.6",
+    "unplugin-auto-import": "^0.16.7",
     "vite": "^4.4.8",
     "vite-plugin-monkey": "^3.4.0",
     "vue-tsc": "^1.8.8"
