--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "user-script",
   "scripts": {
     "dev": "vite --mode yapi-create",
-    "build:yapi": "vue-tsc --noEmit && vite build --mode yapi-create",
+    "build:yapi": "vite build --mode yapi-create",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -24,7 +24,6 @@
     "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.7",
     "vite": "^4.4.8",
-    "vite-plugin-monkey": "^3.4.0",
-    "vue-tsc": "^1.8.8"
+    "vite-plugin-monkey": "^3.4.0"
   }
 }
